--- a/Exam/7.MD
+++ b/Exam/7.MD
@@ -401,3 +401,86 @@ np-test-1    1/1     Running   0          14m     10.50.192.1   node01         <
 prod-redis   1/1     Running   0          9s      10.50.192.2   node01         <none>           <none>
   
 ```
+  
+#### Create a pod called hr-pod in hr namespace belonging to the production environment and frontend tier .
+image: redis:alpine
+
+#### Use appropriate labels and create all the required objects if it does not exist in the system already.
+
+#### hr-pod labeled with environment production?
+
+#### hr-pod labeled with tier frontend?
+  
+  ``` 
+  controlplane ~ ➜  kubectl get ns
+NAME              STATUS   AGE
+default           Active   26m
+kube-node-lease   Active   26m
+kube-public       Active   26m
+kube-system       Active   26m
+
+controlplane ~ ➜  kubectl create ns hr
+namespace/hr created
+
+controlplane ~ ➜  kubectl run hr-pod --image=redis:alpine --labels="environment=production,tier=frontend" -n hr
+pod/hr-pod created
+
+controlplane ~ ➜  kubectl get pods -n hr
+NAME         READY   STATUS    RESTARTS   AGE
+dev-redis    1/1     Running   0          9m44s
+hr-pod       1/1     Running   0          5s
+np-test-1    1/1     Running   0          18m
+prod-redis   1/1     Running   0          4m30s
+  
+controlplane ~ ➜  kubectl describe pod hr-pod -n hr 
+Name:         hr-pod
+Namespace:    hr
+Priority:     0
+Node:         controlplane/10.12.93.12
+Start Time:   Mon, 21 Nov 2022 06:36:54 +0000
+Labels:       environment=production
+              tier=frontend
+Annotations:  <none>
+Status:       Running
+IP:           10.50.0.5
+IPs:
+  IP:  10.50.0.5
+Containers:
+  hr-pod:
+    Container ID:   containerd://a01908490a50acc0b9380ede80eec61f9104ab483a60069e61a68374cb7ce478
+    Image:          redis:alpine
+    Image ID:       docker.io/library/redis@sha256:2700d5097763fda285c463f4eefc3d0730a2df2a9d48e66707b19d5a5e5f23d4
+    Port:           <none>
+    Host Port:      <none>
+    State:          Running
+      Started:      Mon, 21 Nov 2022 06:36:55 +0000
+    Ready:          True
+    Restart Count:  0
+    Environment:    <none>
+    Mounts:
+      /var/run/secrets/kubernetes.io/serviceaccount from kube-api-access-4cvs9 (ro)
+Conditions:
+  Type              Status
+  Initialized       True 
+  Ready             True 
+  ContainersReady   True 
+  PodScheduled      True 
+Volumes:
+  kube-api-access-4cvs9:
+    Type:                    Projected (a volume that contains injected data from multiple sources)
+    TokenExpirationSeconds:  3607
+    ConfigMapName:           kube-root-ca.crt
+    ConfigMapOptional:       <nil>
+    DownwardAPI:             true
+QoS Class:                   BestEffort
+Node-Selectors:              <none>
+Tolerations:                 node.kubernetes.io/not-ready:NoExecute op=Exists for 300s
+                             node.kubernetes.io/unreachable:NoExecute op=Exists for 300s
+Events:
+  Type    Reason     Age   From               Message
+  ----    ------     ----  ----               -------
+  Normal  Scheduled  34s   default-scheduler  Successfully assigned hr/hr-pod to controlplane
+  Normal  Pulled     33s   kubelet            Container image "redis:alpine" already present on machine
+  Normal  Created    33s   kubelet            Created container hr-pod
+  Normal  Started    33s   kubelet            Started container hr-pod
+
