--- a/Exam/2.MD
+++ b/Exam/2.MD
@@ -31,7 +31,7 @@ kubectl get deployments.apps -o=custom-columns=DEPLOYMENT:.metadata.name,CONTAIN
 #### A kubeconfig file called admin.kubeconfig has been created in /root/CKA. There is something wrong with the configuration. Troubleshoot and fix it.
 
 #### Fix /root/CKA/admin.kubeconfig
-
+  
 Weight: 8  
   
  ``` 
@@ -58,5 +58,14 @@ users:
  
   6443 port  has been corrected 
   
+ controlplane ~ ➜  kubectl get nodes --kubeconfig=/root/CKA/admin.kubeconfig 
+The connection to the server controlplane:4380 was refused - did you specify the right host or port?
+
+controlplane ~ ✖ vim /root/CKA/admin.kubeconfig 
+
+controlplane ~ ➜  kubectl get nodes --kubeconfig=/root/CKA/admin.kubeconfig 
+NAME           STATUS   ROLES           AGE   VERSION
+controlplane   Ready    control-plane   78m   v1.24.0
+node01         Ready    <none>          77m   v1.24.0
  controlplane ~/CKA ➜  cat admin.kubeconfig |grep contr
    server: https://controlplane:6443
