--- a/Exam/3.MD
+++ b/Exam/3.MD
@@ -202,3 +202,20 @@ spec:
     requests:
       storage: 1Gi
   storageClassName: slow
+  
+ controlplane ~ ➜  kubectl create -f pvc 
+persistentvolumeclaim/alpha-pvc created
+
+controlplane ~ ➜  kubectl get pv
+NAME       CAPACITY   ACCESS MODES   RECLAIM POLICY   STATUS   CLAIM               STORAGECLASS   REASON   AGE
+alpha-pv   1Gi        RWO            Retain           Bound    default/alpha-pvc   slow                    53m
+
+controlplane ~ ➜  kubectl get pod
+NAME                            READY   STATUS    RESTARTS   AGE
+gold-nginx-7cf65dbf6d-txj8d     1/1     Running   0          36m
+nginx-deploy-75d47c9469-bl7zb   1/1     Running   0          8m24s
+
+controlplane ~ ➜  kubectl get deployments.apps 
+NAME           READY   UP-TO-DATE   AVAILABLE   AGE
+gold-nginx     1/1     1            1           54m
+nginx-deploy   1/1     1            1           12m
