--- a/Exam/4.MD
+++ b/Exam/4.MD
@@ -25,6 +25,10 @@ kubectl run secret-1401 -n admin1401 --image=busybox --dry-run=client -oyaml --c
 
 Add the secret volume and mount path to create a pod called secret-1401 in the admin1401 namespace as follows:
 
+controlplane ~ ➜  kubectl get secrets  -n admin1401 
+NAME             TYPE     DATA   AGE
+dotfile-secret   Opaque   1      17m
+
 ---
 apiVersion: v1
 kind: Pod
@@ -51,4 +55,11 @@ spec:
     - name: secret-volume
       readOnly: true
       mountPath: "/etc/secret-volume"
+
+controlplane ~ ➜  kubectl create -f secreat.yml 
+pod/secret-1401 created
+
+controlplane ~ ➜  kubectl get pods -n admin1401  --watch
+NAME          READY   STATUS    RESTARTS   AGE
+secret-1401   1/1     Running   0          36s
 
