--- a/Exam/5.MD
+++ b/Exam/5.MD
@@ -263,7 +263,6 @@ kind: PersistentVolume
 metadata:
   name: pv-analytics
 spec:
-  storageClassName: manual
   capacity: 
     storage: 100Mi
   accessModes:
@@ -273,5 +272,5 @@ spec:
 
 controlplane ~ ➜  kubectl get pv
 NAME           CAPACITY   ACCESS MODES   RECLAIM POLICY   STATUS      CLAIM   STORAGECLASS   REASON   AGE
-pv-analytics   100Mi      RWX            Retain           Available           manual                  56s
+pv-analytics   100Mi      RWX            Retain           Available                                  56s
  
