--- a/Exam/6.MD
+++ b/Exam/6.MD
@@ -422,6 +422,12 @@ Weight: 15
 #### Pod: nginx-resolver created /  Service DNS Resolution recorded correctly /  Pod DNS resolution recorded correctly
 
 ```
+controlplane ~ ➜  kubectl run nginx-resolver --image=nginx 
+pod/nginx-resolver created
+
+controlplane ~ ➜  kubectl expose pod nginx-resolver --port=80 --name=nginx-resolver-service
+service/nginx-resolver-service exposed
+
 controlplane ~ ➜  kubectl run buzybox --image=busybox:1.28 --command -- sleep 4800 
 pod/buzybox created
 
