--- a/Exam/6.MD
+++ b/Exam/6.MD
@@ -465,8 +465,54 @@ Server:    10.96.0.10
 Address 1: 10.96.0.10 kube-dns.kube-system.svc.cluster.local
 
 Name:      10-50-192-4.default.pod.cluster.local
-Address 1: 10.50.192.4 10-50-192-4.nginx-resolver-service.default.svc.cluster.local
+```
 
-controlplane ~ ➜  kubectl exec buzybox -- nslookup 10-50-192-4.default.pod.cluster.local > /root/CKA/nginx.pod
+##### Create a static pod on node01 called nginx-critical with image nginx and make sure that it is recreated/restarted automatically in case of a failure.
+
+Weight: 15
+
+#### Use /etc/kubernetes/manifests as the Static Pod path for example. / static pod configured under /etc/kubernetes/manifests ? /  Pod nginx-critical-node01 is up and running
+
+```
+controlplane ~ ➜  kubectl run nginx-critical --image=nginx --restart='Always' --dry-run=client -o yaml 
+apiVersion: v1
+kind: Pod
+metadata:
+  creationTimestamp: null
+  labels:
+    run: nginx-critical
+  name: nginx-critical
+spec:
+  containers:
+  - image: nginx
+    name: nginx-critical
+    resources: {}
+  dnsPolicy: ClusterFirst
+  restartPolicy: Always
+status: {}
+
+controlplane ~ ➜  ssh node01
+Last login: Thu Nov 24 05:48:50 2022 from 10.7.48.10
+
+root@node01 ~ ➜  cd /etc/kubernetes/manifests/
+
+root@node01 /etc/kubernetes/manifests ➜  ls -lh
+total 0
+
+root@node01 /etc/kubernetes/manifests ➜  vim nginx-critical.yml
+
+root@node01 /etc/kubernetes/manifests ➜  exit
+logout
+Connection to node01 closed.
+
+controlplane ~ ➜  kubectl get pods
+NAME                            READY   STATUS    RESTARTS   AGE
+buzybox                         1/1     Running   0          8m21s
+nginx-critical-node01           1/1     Running   0          9s
+nginx-deploy-75d47c9469-6z44m   1/1     Running   0          26m
+nginx-resolver                  1/1     Running   0          10m
+redis-storage                   1/1     Running   0          43m
+super-user-pod                  1/1     Running   0          40m
+use-pv                          1/1     Running   0          31m
 
 ```
