--- a/Exam/3.MD
+++ b/Exam/3.MD
@@ -210,12 +210,15 @@ controlplane ~ ➜  kubectl get pv
 NAME       CAPACITY   ACCESS MODES   RECLAIM POLICY   STATUS   CLAIM               STORAGECLASS   REASON   AGE
 alpha-pv   1Gi        RWO            Retain           Bound    default/alpha-pvc   slow                    53m
 
-controlplane ~ ➜  kubectl get pod
-NAME                            READY   STATUS    RESTARTS   AGE
-gold-nginx-7cf65dbf6d-txj8d     1/1     Running   0          36m
-nginx-deploy-75d47c9469-bl7zb   1/1     Running   0          8m24s
+controlplane ~ ➜  kubectl get pvc -n alpha 
+NAME              STATUS    VOLUME     CAPACITY   ACCESS MODES   STORAGECLASS   AGE
+alpha-claim       Pending                                        slow-storage   3m56s
+mysql-alpha-pvc   Bound     alpha-pv   1Gi        RWO            slow           35s
 
-controlplane ~ ➜  kubectl get deployments.apps 
-NAME           READY   UP-TO-DATE   AVAILABLE   AGE
-gold-nginx     1/1     1            1           54m
-nginx-deploy   1/1     1            1           12m
+controlplane ~ ➜  kubectl get pods -n alpha 
+NAME                           READY   STATUS    RESTARTS   AGE
+alpha-mysql-56bdcdf8f7-kklnl   1/1     Running   0          5m8s
+
+controlplane ~ ➜  kubectl get deployments.apps -n alpha 
+NAME          READY   UP-TO-DATE   AVAILABLE   AGE
+alpha-mysql   1/1     1            1           4m10s
