--- a/Exam/3.MD
+++ b/Exam/3.MD
@@ -36,6 +36,10 @@ deployment "nginx-deploy" successfully rolled out
 Weight: 20
 
 ``` 
+controlplane ~ ➜  kubectl get deployments.apps -n alpha 
+NAME          READY   UP-TO-DATE   AVAILABLE   AGE
+alpha-mysql   0/1     1            0           3m28s
+
 controlplane ~ ➜  kubectl get pods -n alpha 
 NAME                           READY   STATUS    RESTARTS   AGE
 alpha-mysql-56bdcdf8f7-zbp7h   0/1     Pending   0          30m
